objects/Partner_Shipping_Option__c.object
<CustomObject>
    <description>Captures partner shipping options and pricing.</description>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Price__c</fullName>
        <description>Default Price for Shipping with this option.</description>
        <inlineHelpText>Default Price for Shipping with this option.</inlineHelpText>
        <label>Default Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Shipping Options</relationshipLabel>
        <relationshipName>Partner_Shipping_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_10_kits__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (10 kits)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_11_kits__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (11 kits)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_12_kits__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (12 kits)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_1_kit__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (1 kit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>S&amp;H RT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Partner Shipping Options</relationshipLabel>
        <relationshipName>Partner_Shipping_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Shipping Option</label>
    <nameField>
        <displayFormat>SHP{00000}</displayFormat>
        <label>PartnerShippingOptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Shipping Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>